Re-added height prop on viewport. Added github icon to footer. Another attempt to fix flex box issue on ios devices

--- a/src/components/Viewport/Viewport.css
+++ b/src/components/Viewport/Viewport.css
@@ -4,9 +4,8 @@
 	left:0;
 
 	width: 100%;
-	height:100%;
 	min-height: 100%;
-
+	
 	display:flex;
 	flex-direction:column;
 
